# calahonda

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml  requirements.txt  script.js  streamlit_app.py  style.css
.github/workflows/: ci.yml  pages.yml
calahonda_var/: __init__.py  backtest.py  data.py  metrics.py  ratios.py  report.py  stress.py  theme.py  var.py
examples/: example_plots.py  example_report.py  example_var.py
tests/: test_data_benchmark.py  test_metrics.py  test_ratios.py  test_report.py  test_stress_backtest.py  test_var.py
