[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "calahonda-var"
version = "1.0.0"
description = "Value at Risk (VaR) e CVaR para carteiras da B3 — métodos histórico, paramétrico e Monte Carlo."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Roberto Chiocca" }]
keywords = ["quant", "finance", "var", "cvar", "monte-carlo", "b3", "risk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Portuguese (Brazilian)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
]

[project.optional-dependencies]
data = ["yfinance>=0.2"]
viz = ["matplotlib>=3.7"]
app = ["streamlit>=1.30", "yfinance>=0.2", "matplotlib>=3.7", "plotly>=5.18", "openpyxl>=3.1"]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "black>=24.0", "ruff>=0.4"]

[project.urls]
Repository = "https://github.com/robertochiocca/calahonda"

[tool.setuptools]
packages = ["calahonda_var"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle (erros)
    "W",   # pycodestyle (avisos)
    "F",   # pyflakes
    "I",   # isort (ordem dos imports)
    "UP",  # pyupgrade (sintaxe moderna)
    "B",   # flake8-bugbear (bugs prováveis)
    "SIM", # flake8-simplify
]

[tool.ruff.lint.per-file-ignores]
# exemplos e testes ajustam sys.path antes dos imports (rodam sem install)
"examples/*" = ["E402"]
"tests/*" = ["E402"]

[tool.coverage.run]
source = ["calahonda_var"]
